Add multiplexing for 16 potentiometers worth of parameters

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:teensy31]
+framework = arduino
 platform = teensy
 board = teensy31
-framework = arduino
+build_flags = -DUSB_MIDI_SERIAL
